<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.optus.jneto.uitest.MainActivity">

    <HorizontalScrollView
        android:id="@+id/scrollViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/layout_padding"
            android:paddingTop="@dimen/layout_padding">

            <ImageView
                tools:ignore="ContentDescription"
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="onImageClick"
                android:tag="1"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                tools:ignore="ContentDescription"
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="onImageClick"
                android:tag="2"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                tools:ignore="ContentDescription"
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="onImageClick"
                android:tag="3"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                tools:ignore="ContentDescription"
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="onImageClick"
                android:tag="4"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                tools:ignore="ContentDescription"
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="onImageClick"
                android:tag="5"
                app:srcCompat="@mipmap/ic_launcher" />

        </LinearLayout>


    </HorizontalScrollView>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewLayout"
        android:layout_below="@+id/scrollViewLayout" />

    <com.optus.jneto.uitest.utils.CirclePageIndicator
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/container"
        android:layout_gravity="bottom"
        android:paddingBottom="16dp"
        app:fillColor="@color/white" />



    <RelativeLayout
        android:id="@+id/textViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:padding="@dimen/layout_padding">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/text1_label" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text2_label" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/textView2"
            android:text="@string/text3_label" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/textView"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonsLayout"
        android:layout_below="@+id/textViewLayout"
        android:gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/buttonsLayout"
        android:background="@android:color/darker_gray" />



    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="3">

        <Button
            android:id="@+id/redButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            android:tag="red"
            android:text="@string/red_label"
            android:textColor="@color/red"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/blueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            android:tag="blue"
            android:text="@string/blue_label"
            android:textColor="@color/blue"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/greenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            android:tag="green"
            android:text="@string/green_label"
            android:textColor="@color/green"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>
